# amd-hackathon-act2

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.web  README.md  Wayfinder_Presentation.pptx  entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py  main.py  utils.py
config/: models.yaml
openspec/: config.yaml
openspec/changes/fallback-threshold/: design.md  proposal.md  tasks.md
openspec/changes/fallback-threshold/specs/fallback-threshold/: spec.md
openspec/changes/routing-agent/: design.md  proposal.md  tasks.md
openspec/changes/routing-agent/specs/routing-agent/: spec.md
openspec/specs/routing-agent/: spec.md
scripts/: _dev_cli.py  _qa_cli.py  benchmark.py  evaluate.py  qa.sh
src/: __main__.py  evaluator.py  models.py  router.py  tasks.py
tests/: test_cli.py  test_config.py  test_evaluator.py  test_models.py  test_router.py  test_tasks.py
