[project]
name = "wayfinder"
version = "0.6.3"
description = "Hybrid Token-Efficient Routing Agent"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
web = ["streamlit>=1.40.0"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
pptx = [
    "python-pptx>=0.6.21",
]

[project.scripts]
qa = "scripts._qa_cli:main"
dev = "scripts._dev_cli:main"
wayfinder = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["N802", "N803"]
# Streamlit requires st.set_page_config to be the first st call, so imports
# must follow it; _debug.py deliberately sets sys.excepthook before importing st.
"app/main.py" = ["E402"]
"app/_debug.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/__main__.py"]

